# PedalSynth

./: BuildingPedalSynth.md  CMakeLists.txt  PedalApp.cpp  PedalApp.hpp  PedalSynth.cpp  readme.md
Pedal/include/pedal/: STFT.hpp
